a lot of fixes, lets test it on mobile

--- a/games/wordle.css
+++ b/games/wordle.css
@@ -11,15 +11,14 @@ body {
 }
 .header {
     text-align: center;
+    margin-bottom: 20px;
     position: absolute;
     top: 0;
     width: 100%;
+    padding: 5px;
     background-color: #fff;
-    padding: 0;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin: 0;
 }
-
 button {
     background-color: #28a745;
     color: white;
@@ -29,6 +28,23 @@ button {
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    /* make it in the middle of input above, add a space between those two*/
+    margin-bottom: 10px;    
+}
+.hidden {
+    display: none;
+}
+.info{
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    /* make it in the middle of input above, add a space between those two*/
+    margin-bottom: 10px;    
 }
 button:hover {
     background-color: #218838;
@@ -42,7 +58,9 @@ input {
     border: 1px solid #ccc;
     border-radius: 5px;
     margin-right: 10px;
+    margin-bottom: 10px;
 }
+
 .container {
     text-align: center;
     width: 100%;
